# MLOPS

./: .gitignore  README.md  init.py  requirements.txt
Cayden/: requirements.txt  vercel.json
data/test/: anomaly_detection_test.csv
ds_project/: pyproject.toml
ds_project/config/: app1_config.yaml  app2_config.yaml  app3_config.yaml
ds_project/ds_project/: main.py
dvctest/.dvc/tmp/: lock
dvctest/data/: .gitignore  01_residential_data (1).csv.dvc  02_mushroom_species_data.csv.dvc  03_transaction_records.csv.dvc
notebooks/: 223905L_MLOPs_Final.ipynb  Mushroom_Classification_220679Y.ipynb
src/Anomaly Detection/: Dockerfile  README.md  app.py  requirements.txt
src/Anomaly Detection/templates/: api_doc.html  home.html  multi.html  result.html
src/Classification/: Dockerfile  README.md  app.py
src/Regression/: README.md
templates/: home.html  multi.html  result.html
