[tool.poetry]
name = "ds-project"
version = "0.1.0"
description = ""
authors = ["chingyi21 <khuachingyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
